@@ -1,3 +1,10 @@
+1999-03-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* Selector.java: Search through results of getMethods and match
+	by signature name.  If there is more than one found, raise
+	NonUniqueMethodSignature exception.  If none is found raise
+	SignatureNotFoundException. 
+
 1999-03-21  Marcus G. Daniels  <mgd@chimayo.santafe.edu>
 
 	* Selector.java: Make class public.
